force-app/main/default/objects/Recipe_Line_Item__c/Recipe_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Recipe Line Item</label>
    <nameField>
        <displayFormat>RLI-{0000000}</displayFormat>
        <label>Recipe Line Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recipe Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>