force-app/main/default/objects/Recipe_Line_Item__c/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <description>Price in euros of the raw material in the recipe</description>
    <formula>Raw_Material__r.Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price (Raw Material)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>