force-app/main/default/objects/Recipe_Line_Item__c/fields/Price_Recipe__c.field-meta.xml
<CustomField>
    <fullName>Price_Recipe__c</fullName>
    <description>Price of this ingredient in the recipe = Quantity used * Raw Material price / Raw Material stock quantity</description>
    <formula>IF(OR(ISBLANK(Quantity__c), Quantity__c = 0), 0, Quantity_Recipe__c * Price__c / Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Price of this ingredient in the recipe = Quantity used * Raw Material price / Raw Material stock quantity</inlineHelpText>
    <label>Price (Recipe)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>