force-app/main/default/objects/Recipe_Line_Item__c/fields/Price_total_Recipe_Stored__c.field-meta.xml
<CustomField>
    <fullName>Price_total_Recipe_Stored__c</fullName>
    <label>Price total Recipe Stored</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>