force-app/main/default/objects/Recipe_Line_Item__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <description>Quantity in grams needed for the recipe</description>
    <formula>Raw_Material__r.Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity (Raw Material)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>