force-app/main/default/objects/Recipe_Line_Item__c/fields/Quantity_Recipe__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Recipe__c</fullName>
    <description>Quantity in grams of this ingredient used in the recipe</description>
    <label>Quantity (Recipe)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>