force-app/main/default/objects/Recipe_Line_Item__c/fields/Raw_Material__c.field-meta.xml
<CustomField>
    <fullName>Raw_Material__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Common name of the ingredient used in the recipe</description>
    <label>Raw Material</label>
    <referenceTo>Raw_Material__c</referenceTo>
    <relationshipLabel>Recipe Line Items</relationshipLabel>
    <relationshipName>Recipe_Line_Items_Raw_Material</relationshipName>
    <type>Lookup</type>
</CustomField>