force-app/main/default/objects/Recipe_Line_Item__c/fields/Recipe__c.field-meta.xml
<CustomField>
    <fullName>Recipe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipe</label>
    <referenceTo>Recipe__c</referenceTo>
    <relationshipLabel>Recipe Line Items</relationshipLabel>
    <relationshipName>Recipe_Line_Items_Recipe</relationshipName>
    <type>Lookup</type>
</CustomField>