force-app/main/default/objects/Recipe_Line_Item__c/listViews/All_Recipe_Line_Items.listView-meta.xml
<ListView>
    <fullName>All_Recipe_Line_Items</fullName>
    <columns>NAME</columns>
    <columns>Recipe__c</columns>
    <columns>Raw_Material__c</columns>
    <columns>Quantity_Recipe__c</columns>
    <columns>Price_Recipe__c</columns>
    <columns>Price__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Recipe Line Items</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>